# freeeman_lab_bot

./: .gitignore  README.md  ToDo.md  docker-compose.yml
admin-bot/: .env.example  Dockerfile  README.md  api.py  config.py  main.py  messages.json  pyproject.toml  telegram.py
admin-bot/core/utils/: __init__.py  api.py  funcs.py
admin-bot/handlers/: __init__.py
admin-bot/handlers/system/: handlers.py
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_16_1643-ce7a8b89a6a7_add_minimal_user.py  2026_03_24_1128-022ba7ac1893_added_diagnostics_profile_and_file_.py
backend/api/: __init__.py
backend/api/v1/diagnostics/: views.py
backend/api/v1/files/: views.py
backend/api/v1/users/: views.py
backend/constracts/: __init__.py
backend/constracts/user/: __init__.py
backend/contracts/: __init__.py
backend/contracts/diagnostics/: __init__.py  schemas.py
backend/contracts/files/: __init__.py  schemas.py
backend/contracts/user/: schemas.py
backend/core/: __init__.py  database.py  rmq_router.py
backend/core/models/: __init__.py  base.py  diagnostics.py  file.py  profile.py  user.py
backend/service/: __init__.py  crud.py  error_handlers.py  s3.py
backend/service/diagnostic/: publisher.py
backend/service/files/: crud.py
bot/: .dockerignore  Dockerfile  config.py  main.py  messages.json  pyproject.toml
bot/core/buttons/: __init__.py  (+7 more)
bot/files/: Потолок_внутри_код_расширения_Александр_Фриман.epub
bot/handlers/: __init__.py
docs/plans/: 2026-03-30-minio-bucket-design.md
(+24 files in other folders)
